@@ -91,7 +91,7 @@ public class UpgradeServlet extends JAMWikiServlet {
 			user = DatabaseUpgrades.login(username, password, false);
 		}
 		if (user != null) {
-            //FIXME - login via Acegi Security
+			//FIXME - login via Acegi Security
 			request.getSession().setAttribute(ServletUtil.PARAMETER_USER, user);
 			return true;
 		}
@@ -184,7 +184,7 @@ public class UpgradeServlet extends JAMWikiServlet {
 			next.addObject("message", wm);
 			// re-login now that everything is up-to-date
 			WikiUser user = Utilities.currentUser(request);
-            // FIXME - What's that for? If Utilities.currentUser returns a user, he is logged. If not, no login is possible.
+			// FIXME - What's that for? If Utilities.currentUser returns a user, he is logged. If not, no login is possible.
 			Utilities.login(request, null, user, false);
 		} else {
 			next.addObject("error", new WikiMessage("upgrade.caption.upgradefailed"));
